// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> renders bold 1`] = `
<Text
  baseline={false}
  bold={true}
  inline={true}
  large={false}
  small={false}
>
  <ButtonOrLink
    className="f2jocwq"
    href="#"
  >
    Bold
  </ButtonOrLink>
</Text>
`;

exports[`<Link /> renders disabled 1`] = `
<span
  className="f1jbltt"
>
  <ButtonOrLink
    className="f11ex46j"
    disabled={true}
    href="#"
  >
    Disabled
  </ButtonOrLink>
</span>
`;

exports[`<Link /> renders inverted 1`] = `
<span
  className="f1jbltt"
>
  <ButtonOrLink
    className="f1pvipg5"
    href="#"
  >
    Inverted
  </ButtonOrLink>
</span>
`;

exports[`<Link /> renders large 1`] = `
<span
  className="f1h8wmf0"
>
  <ButtonOrLink
    className="f2jocwq"
    href="#"
  >
    Large
  </ButtonOrLink>
</span>
`;

exports[`<Link /> renders muted 1`] = `
<span
  className="f1jbltt"
>
  <ButtonOrLink
    className="fpt8app"
    href="#"
  >
    Muted
  </ButtonOrLink>
</span>
`;

exports[`<Link /> renders small 1`] = `
<span
  className="f1bw1br"
>
  <ButtonOrLink
    className="f2jocwq"
    href="#"
  >
    Small
  </ButtonOrLink>
</span>
`;
